--- a/some_jupyters/creating_env_continuous_optim_inside.ipynb
+++ b/some_jupyters/creating_env_continuous_optim_inside.ipynb
@@ -35,10 +35,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qml.PauliX.num_params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qml.Rot.num_params"
+   ]
   },
   {
    "cell_type": "code",
@@ -53,6 +86,23 @@
     "            \"4\":{\"gate\": qml.CNOT, \"wires\": [1,0]},#, \"params\":[np.pi]},\n",
     "            \"5\":{\"gate\": qml.RY, \"wires\": [0], \"params\":[0.78476]},\n",
     "            \"6\":{\"gate\":qml.Rot, \"wires\":[0], \"params\": np.array([-2.31419177e-03,  5.49757776e+00,  3.14314062e+00])}, #borrowed from other optimization\n",
+    "            \"7\":{\"gate\": qml.CNOT, \"wires\": [0,1]},#, \"params\":[np.pi]},\n",
+    "           }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alphabet_w = {\"0\":{\"gate\": qml.PauliX, \"wires\": [2]}, \n",
+    "            \"1\":{\"gate\": qml.RZ, \"wires\": [0]},\n",
+    "            \"2\":{\"gate\": qml.RY, \"wires\": [1]},\n",
+    "            \"3\":{\"gate\": qml.CNOT, \"wires\": [1,2]},#, \"params\":[np.pi]},\n",
+    "            \"4\":{\"gate\": qml.CNOT, \"wires\": [1,0]},#, \"params\":[np.pi]},\n",
+    "            \"5\":{\"gate\": qml.RY, \"wires\": [0]},\n",
+    "            \"6\":{\"gate\":qml.Rot, \"wires\":[0]}, #borrowed from other optimization\n",
     "            \"7\":{\"gate\": qml.CNOT, \"wires\": [0,1]},#, \"params\":[np.pi]},\n",
     "           }"
    ]
