some results for genetic vans, ising

--- a/misc/random_and_keep_best.ipynb
+++ b/misc/random_and_keep_best.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,9 +452,7 @@
     "                                new_indexed_circuit[places_gates[str(q)][ind]] = -1 ###just kill the repeated CNOTS\n",
     "                                break\n",
     "                    \n",
-    "        #### remove the marked indices ###### \n",
-    "        #### remove the marked indices ######            \n",
-    "        \n",
+    "                    \n",
     "        final=[]\n",
     "        for gmarked in new_indexed_circuit:\n",
     "            if not gmarked == -1:\n",
@@ -464,43 +462,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1.6401397907440889"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol = Solver(n_qubits= 2, qlr=0.1, qepochs=100, g=1, J=1)\n",
+    "sol.ground_energy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "energy:  -0.1\n",
-      "energy:  -1.9997399\n",
-      "energy:  -1.9997731\n",
-      "energy:  -1.9998915\n",
-      "energy:  -1.9999988\n",
-      "energy:  -1.9998937\n",
-      "energy:  -3.9999423\n",
-      "energy:  -3.999551\n",
-      "energy:  -3.999815\n",
-      "energy:  -3.9999676\n",
-      "energy:  -3.9998822\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n",
-      "energy:  -3.999985\n"
+      "energy:  -2.8281465\n",
+      "energy:  -2.8283668\n",
+      "energy:  -2.828415\n",
+      "energy:  -2.828415\n",
+      "energy:  -2.8282952\n",
+      "energy:  -2.8283453\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n",
+      "energy:  -2.828424\n"
      ]
     }
    ],
    "source": [
-    "sol = Solver(n_qubits= 3, qlr=0.1, qepochs=100)\n",
+    "sol = Solver(n_qubits= 2, qlr=0.1, qepochs=100, g= 1, J=1)\n",
     "history_energies=[]\n",
     "best_energies_found = []\n",
     "\n",
@@ -508,10 +522,9 @@
     "gates_index, resolver, energy= sol.run_circuit_from_index(gates_index)\n",
     "sol.current_circuit = gates_index\n",
     "\n",
-    "for k in range(25):\n",
+    "for k in range(20):\n",
     "\n",
     "    qubits = np.random.choice(sol.n_qubits, 2,replace = False)\n",
-    "    \n",
     "    block_to_insert = sol.resolution_2cnots(qubits[0], qubits[1])\n",
     "    \n",
     "    insertion_index = np.random.choice(max(1,len(gates_index))) #gives index between \\in [0, len(gates_index) )\n",
