little modifications on the jupyter notebook where TFQ DensityMatrixSimulator and VQE on it is compared with the the batch patch

--- a/noise_VANS_and_TFQ.ipynb
+++ b/noise_VANS_and_TFQ.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we explore different ways of adding noise to the circuits."
+    "In this notebook we compare DensityMatrixSimulator with the batch method proposed by Antonio from TFQ (see the open issue)"
    ]
   },
   {
