small change unimportant

--- a/qchem.ipynb
+++ b/qchem.ipynb
@@ -2,6 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 341,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/cooper-cooper/Desktop/vans\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [],
@@ -383,27 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-0.9389223859872753+0j)"
-      ]
-     },
-     "execution_count": 334,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.abs(np.sum(manim-mat))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 340,
    "metadata": {},
    "outputs": [
     {
@@ -412,19 +410,14 @@
        "0.0"
       ]
      },
-     "execution_count": 339,
+     "execution_count": 340,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "np.abs(np.sum(manim-mat))"
+   ]
   }
  ],
  "metadata": {
