first steps towards bigger molecules

--- a/liH.ipynb
+++ b/liH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,78 @@
     "run_cisd = 0\n",
     "run_ccsd = 0\n",
     "run_fci = 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bd = 2.0\n",
+    "ener=[]\n",
+    "bond_length=bd\n",
+    "geometry = [('Li', (0., 0., 0.)), ('H', (0., 0., 2.0))]\n",
+    "hamiltonian = ofpyscf.generate_molecular_hamiltonian(geometry, basis=\"sto-3g\", multiplicity=1, charge=0)\n",
+    "qham = of.jordan_wigner(hamiltonian)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hamiltonian.n_qubits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "molecule = MolecularData(\n",
+    "    geometry, basis=\"sto-3g\", multiplicity=1,\n",
+    "    description=str(round(bd, 2)))\n",
+    "\n",
+    "molecule = run_pyscf(molecule,\n",
+    "                 run_scf=run_scf,\n",
+    "                 run_mp2=run_mp2,\n",
+    "                 run_cisd=run_cisd,\n",
+    "                 run_ccsd=run_ccsd,\n",
+    "                 run_fci=run_fci)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-7.861087772481495"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "molecule.fci_energy"
    ]
   },
   {
