some modificiations in the loading of the results, plotting xxz, hamiltonians into a folder, little clean-up

--- a/testing_chemical/liH.ipynb
+++ b/testing_chemical/liH.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,6 +472,88 @@
    "source": [
     "np.abs(np.sum(manim-mat))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 31/31 [00:07<00:00,  3.92it/s]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-11.65685425, -11.90372299, -12.16097299, -12.42787266,\n",
+       "       -12.70373609, -12.98791841, -13.27981338, -13.57885189,\n",
+       "       -13.8845011 , -14.19626355, -14.60437364, -15.0982735 ,\n",
+       "       -15.60631339, -16.12841013, -16.6644303 , -17.21418164,\n",
+       "       -17.77740788, -18.35378731, -18.942935  , -19.54440828,\n",
+       "       -20.15771482, -20.78232254, -21.41767044, -22.06317957,\n",
+       "       -22.71826344, -23.38233749, -24.05482709, -24.73517414,\n",
+       "       -25.42284215, -26.11731988, -26.81812373])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
