--- a/testing/testing_variational/variational_noisy?.ipynb
+++ b/testing/testing_variational/variational_noisy?.ipynb
@@ -9,6 +9,8 @@
     "import numpy as np\n",
     "import cirq\n",
     "import tensorflow_quantum as tfq\n",
+    "import tensorflow as tf\n",
+    "\n",
     "from utilities.circuit_basics import Basic\n",
     "import tensorflow as tf\n",
     "import matplotlib.pyplot as plt\n",
