--- a/running_examples/loading_results_from_pic.ipynb
+++ b/running_examples/loading_results_from_pic.ipynb
@@ -11,6 +11,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1353352832366127"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(-0.02*100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
@@ -619,9 +648,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "qenv_bilkis",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "qenv_bilkis"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -633,7 +662,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
