bug found: when replacing the gates in new_indexed_circuit, it's not enoguh to check if it has not value -1 to know that that gate has not been touched..

--- a/compilation-Copy1.ipynb
+++ b/compilation-Copy1.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -21,14 +30,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tf.Tensor([-8.000001], shape=(1,), dtype=float32) tf.Tensor(-7.999999, shape=(), dtype=float32)\n"
+      "tf.Tensor([-7.9999995], shape=(1,), dtype=float32) tf.Tensor(-7.9999995, shape=(), dtype=float32)\n"
      ]
     }
    ],
@@ -50,23 +59,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(1.5π)─────────────────────────────@───Rx(-π)─────Rz(1.5π)────────────────────────────────────────────────────────\n",
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-0.5π)────────────────────────────@───Rx(2π)──────Rz(0.5π)───────────────────────────────────────────────────────────\n",
        "                                                │\n",
-       "(0, 1): ───Rx(2π)─────Rz(1.52π)───Rx(-0.245π)───X───Rx(0.8π)───Rx(1.04π)───Rx(0.492π)───Rx(1.99π)───Rx(-0.941π)───Rx(-1.13π)───</pre>"
+       "(0, 1): ───Rx(0)───────Rz(0.235π)───Rx(1.51π)───X───Rx(1.86π)───Rx(-0.212π)───Rx(-0.999π)───Rx(-1.53π)───Rx(1.36π)───Rx(-0.995π)───</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(1.5π)─────────────────────────────@───Rx(-π)─────Rz(1.5π)────────────────────────────────────────────────────────\n",
+       "(0, 0): ───Rx(-0.5π)────────────────────────────@───Rx(2π)──────Rz(0.5π)───────────────────────────────────────────────────────────\n",
        "                                                │\n",
-       "(0, 1): ───Rx(2π)─────Rz(1.52π)───Rx(-0.245π)───X───Rx(0.8π)───Rx(1.04π)───Rx(0.492π)───Rx(1.99π)───Rx(-0.941π)───Rx(-1.13π)───"
+       "(0, 1): ───Rx(0)───────Rz(0.235π)───Rx(1.51π)───X───Rx(1.86π)───Rx(-0.212π)───Rx(-0.999π)───Rx(-1.53π)───Rx(1.36π)───Rx(-0.995π)───"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -96,23 +105,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(1.5π)────────────────────────@───Rx(-π)───Rz(1.5π)───\n",
-       "                                           │\n",
-       "(0, 1): ───Rx(2π)─────Rz(1.52π)───Rx(2π)───X───────────────────────</pre>"
+       "<pre style=\"overflow: auto; white-space: pre;\">(0, 0): ───Rx(-0.5π)────────────────────────@───Rx(2π)───Rz(0.5π)───\n",
+       "                                            │\n",
+       "(0, 1): ───Rx(0)───────Rz(0.235π)───Rx(π)───X───────────────────────</pre>"
       ],
       "text/plain": [
-       "(0, 0): ───Rx(1.5π)────────────────────────@───Rx(-π)───Rz(1.5π)───\n",
-       "                                           │\n",
-       "(0, 1): ───Rx(2π)─────Rz(1.52π)───Rx(2π)───X───────────────────────"
+       "(0, 0): ───Rx(-0.5π)────────────────────────@───Rx(2π)───Rz(0.5π)───\n",
+       "                                            │\n",
+       "(0, 1): ───Rx(0)───────Rz(0.235π)───Rx(π)───X───────────────────────"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-8.000001], dtype=float32)>"
+       "<tf.Tensor: shape=(1,), dtype=float32, numpy=array([-8.], dtype=float32)>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
